asupersync-macros/tests/compile_fail/select_empty_branches.rs
use asupersync_macros::select;

fn main() {
    // select! requires at least one branch.
    let _ = select!(cx, {});
}
